spade-tests/src/snapshots/spade_tests__integration__namespace_tests__pipeline_shadowing_does_not_fail_silently.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of undeclared name {name}
  ┌─ testinput:6:19
  │
6 │         stage(-2).x
  │                   ^ Undeclared name


